Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123058

Qt WebEngine does not build with -no-opengl

    XMLWordPrintable

Details

    • 63d4e5800 (5.15)

    Description

      If configure Qt with "-no-opengl" then WebEngine cannot be built. The problem is that both

      qt_gl_global_share_context
      

      and

      usingANGLE
      

      are wrapped inside

      QT_CONFIG(opengl)
      

      But the following function calls are not.

      See how QT_CONFIG(opengl) limits the scope here:
      https://github.com/qt/qtwebengine/blob/5.15.16/src/core/web_engine_context.cpp#L147-L165
      But not here:
      https://github.com/qt/qtwebengine/blob/5.15.16/src/core/web_engine_context.cpp#L655-L658

      Currently, users are greeted by the following error due to the problem I describe above:

      D:/QtBuild/qt5/qtwebengine/src/core/web_engine_context.cpp(655): error C3861: "qt_gl_global_share_context": Bezeichner wurde nicht gefunden.
      D:/QtBuild/qt5/qtwebengine/src/core/web_engine_context.cpp(656): error C3861: "qt_gl_global_share_context": Bezeichner wurde nicht gefunden.
      D:/QtBuild/qt5/qtwebengine/src/core/web_engine_context.cpp(657): error C3861: "qt_gl_global_share_context": Bezeichner wurde nicht gefunden.
      D:/QtBuild/qt5/qtwebengine/src/core/web_engine_context.cpp(655): error C2789: isGLES2Context: Ein Objekt eines durch eine Konstante qualifizierten Typs muss initialisiert werden.
      D:/QtBuild/qt5/qtwebengine/src/core/web_engine_context.cpp(655): note: Siehe Deklaration von "isGLES2Context"
      D:/QtBuild/qt5/qtwebengine/src/core/web_engine_context.cpp(658): error C3861: "usingANGLE": Bezeichner wurde nicht gefunden.
      

      And WebEngine cannot be built.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mibrunin Michael Bruning
            luqiaochen Luqiao Chen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes