Fix build errors with -no-opengl configuration

Add the proper compile time guards around the usages of OpenGL specific
methods that were missing them.

Fixes: QTBUG-123058
Change-Id: If9545b7565b69c7a4c5d183754b3750a3c6c1298
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>